// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI behavior final message: basic functionality with cli final messsage 1`] = `
"import {
  createClient,
  QueryFetcher,
  ScalarsEnumsHash,
  Schema,
} from '@dish/gqless';

export type Maybe<T> = T | null;
export type Exact<T extends { [key: string]: unknown }> = {
  [K in keyof T]: T[K];
};
/** All built-in and custom scalars, mapped to their actual values */
export interface Scalars {
  ID: string;
  String: string;
  Boolean: boolean;
  Int: number;
  Float: number;
}

const scalarsEnumsHash: ScalarsEnumsHash = { String: true, Boolean: true };
const generatedSchema: Schema = { query: { hello: { __type: 'String!' } } };

export interface Query {
  hello: ScalarsEnums['String'];
}

export interface GeneratedSchema {
  query: Query;
}

export interface ScalarsEnums extends Scalars {}

const queryFetcher: QueryFetcher = async function (query, variables) {
  const response = await fetch('/graphql', {
    method: 'POST',
    headers: {
      'Content-Type': 'application/json',
    },
    body: JSON.stringify({
      query,
      variables,
    }),
    mode: 'cors',
  });

  if (!response.ok) {
    throw new Error(\`Network error, received status code \${response.status}\`);
  }

  const json = await response.json();

  return json;
};

export const { client, resolveAllSelections, resolved } = createClient<
  GeneratedSchema
>(generatedSchema, scalarsEnumsHash, queryFetcher);
"
`;

exports[`basic inspectWriteGenerate functionality: basic inspectWriteGenerate 1`] = `
"import {
  createClient,
  QueryFetcher,
  ScalarsEnumsHash,
  Schema,
} from '@dish/gqless';

export type Maybe<T> = T | null;
export type Exact<T extends { [key: string]: unknown }> = {
  [K in keyof T]: T[K];
};
/** All built-in and custom scalars, mapped to their actual values */
export interface Scalars {
  ID: string;
  String: string;
  Boolean: boolean;
  Int: number;
  Float: number;
}

const scalarsEnumsHash: ScalarsEnumsHash = { String: true, Boolean: true };
const generatedSchema: Schema = { query: { hello: { __type: 'String!' } } };

export interface Query {
  hello: ScalarsEnums['String'];
}

export interface GeneratedSchema {
  query: Query;
}

export interface ScalarsEnums extends Scalars {}

const queryFetcher: QueryFetcher = async function (query, variables) {
  const response = await fetch('/graphql', {
    method: 'POST',
    headers: {
      'Content-Type': 'application/json',
    },
    body: JSON.stringify({
      query,
      variables,
    }),
    mode: 'cors',
  });

  if (!response.ok) {
    throw new Error(\`Network error, received status code \${response.status}\`);
  }

  const json = await response.json();

  return json;
};

export const { client, resolveAllSelections, resolved } = createClient<
  GeneratedSchema
>(generatedSchema, scalarsEnumsHash, queryFetcher);
"
`;

exports[`inspect headers specify headers to inspectWriteGenerate: specify headers 1`] = `
"// This should be included
import {
  createClient,
  QueryFetcher,
  ScalarsEnumsHash,
  Schema,
} from '@dish/gqless';

export type Maybe<T> = T | null;
export type Exact<T extends { [key: string]: unknown }> = {
  [K in keyof T]: T[K];
};
/** All built-in and custom scalars, mapped to their actual values */
export interface Scalars {
  ID: string;
  String: string;
  Boolean: boolean;
  Int: number;
  Float: number;
}

const scalarsEnumsHash: ScalarsEnumsHash = { String: true, Boolean: true };
const generatedSchema: Schema = { query: { hello: { __type: 'String!' } } };

export interface Query {
  hello: ScalarsEnums['String'];
}

export interface GeneratedSchema {
  query: Query;
}

export interface ScalarsEnums extends Scalars {}

const queryFetcher: QueryFetcher = async function (query, variables) {
  const response = await fetch('/graphql', {
    method: 'POST',
    headers: {
      'Content-Type': 'application/json',
    },
    body: JSON.stringify({
      query,
      variables,
    }),
    mode: 'cors',
  });

  if (!response.ok) {
    throw new Error(\`Network error, received status code \${response.status}\`);
  }

  const json = await response.json();

  return json;
};

export const { client, resolveAllSelections, resolved } = createClient<
  GeneratedSchema
>(generatedSchema, scalarsEnumsHash, queryFetcher);
"
`;

exports[`specify generateOptions to inspectWriteGenerate: generateOptions 1`] = `
"// This should be included

import {
  createClient,
  QueryFetcher,
  ScalarsEnumsHash,
  Schema,
} from '@dish/gqless';

export type Maybe<T> = T | null;
export type Exact<T extends { [key: string]: unknown }> = {
  [K in keyof T]: T[K];
};
/** All built-in and custom scalars, mapped to their actual values */
export interface Scalars {
  ID: string;
  String: string;
  Boolean: boolean;
  Int: number;
  Float: number;
}

const scalarsEnumsHash: ScalarsEnumsHash = { String: true, Boolean: true };
const generatedSchema: Schema = { query: { hello: { __type: 'String!' } } };

export interface Query {
  hello: ScalarsEnums['String'];
}

export interface GeneratedSchema {
  query: Query;
}

export interface ScalarsEnums extends Scalars {}

const queryFetcher: QueryFetcher = async function (query, variables) {
  const response = await fetch('/graphql', {
    method: 'POST',
    headers: {
      'Content-Type': 'application/json',
    },
    body: JSON.stringify({
      query,
      variables,
    }),
    mode: 'cors',
  });

  if (!response.ok) {
    throw new Error(\`Network error, received status code \${response.status}\`);
  }

  const json = await response.json();

  return json;
};

export const { client, resolveAllSelections, resolved } = createClient<
  GeneratedSchema
>(generatedSchema, scalarsEnumsHash, queryFetcher);
"
`;
